--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -18,7 +18,62 @@ body {
 #duplicate{
   color:red;
 }
+.speech-bubble {
+  background:	#D3D3D3;
+  opacity: 0.7;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  line-height: 1.3;
+  margin: 0 auto 40px;
+  max-width: 400px;
+  padding: 15px;
+  position: relative;
+}
 
+.speech-bubble p {
+  margin: 0 0 10px;
+}
+.speech-bubble p:last-of-type {
+  margin-bottom: 0;
+}
+
+.speech-bubble::after {
+  border-left: 20px solid transparent;
+  border-top: 20px solid #efefef;
+  bottom: -20px;
+  content: "";
+  position: absolute;
+  right: 20px;
+}
+.comment-bubble {
+  background:	#D3D3D3;
+  opacity: 0.7;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  line-height: 1.3;
+  margin: 0 auto 40px;
+  max-width: 400px;
+  padding: 15px;
+  position: relative;
+}
+
+.comment-bubble p {
+  margin: 0 0 10px;
+}
+.comment-bubble p:last-of-type {
+  margin-bottom: 0;
+}
+
+.comment-bubble::after {
+  border-left: 20px solid transparent;
+  border-top: 20px solid #efefef;
+  bottom: -20px;
+  content: "";
+  position: absolute;
+  right: 20px;
+}
 .card-title,
 .card-header {
   color: #000;
