--- a/views/display-posts.handlebars
+++ b/views/display-posts.handlebars
@@ -23,21 +23,27 @@
         <h3 class="text-center topPost">Trending Posts</h3>
         {{!-- Iterate through 'posts' data item. --}}
         {{#each posts}}
-        <div class="card mt-4">
+          <div class="speech-bubble">
           {{!-- Title as card header --}}
-          <h5 class="card-header"><a href="/post/{{this.id}}">{{this.text}}</h5></a>
-          <div class="card-body">
-            <p class="card-text">{{this.description}}</p>
-            <p>Created By:{{this.User.name}} </p>
+          <h5 class="card-title"><a href="/post/{{this.id}}">{{this.text}}</h5></a>
+          <hr>
+          <div class="">
+            <p class="">{{this.description}}</p>
+            <p>-{{this.User.name}} </p>
             <button class= "like" value = '{{this.id}}'>Like</button>
           </div>
         </div>
         {{/each}}
+      
+</div>
+      
+</div>
       </div>
 
     </div>
   </div>
   {{!-- End Body --}}
+  
 
 </div>
 
