--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -31,11 +31,11 @@
   <div class="collapse navbar-collapse navbarContent">
 		<ul class="navbar-nav ml-auto">
       <li id="postLink" class="nav-item">
-        <a class="nav-link" href="/post">Create Post
+        <a class="nav-link hvr-underline-from-center " href="/post">Create Post
           <i class="fas fa-plus"></i><span class="sr-only">(current)</span></a>
       </li>
             <li id="popularPosts" class="nav-item">
-        <a class="nav-link" href="/popular">Most Popular Posts
+        <a class="nav-link hvr-underline-from-center " href="/popular">Most Popular Posts
           <span class="sr-only">(current)</span></a>
       </li>
     
